<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Form Factor</string>
	<string name="action_close">Close</string>
	<string name="action_open">Open</string>
	<string name="action_save">Save</string>
	<string name="action_cancel">Cancel</string>
	<string name="activity_complete_title">Complete Form</string>
	<string name="activity_create_title">Create Form</string>
	<string name="activity_multiple_choice_response_edit_title">Edit Choice</string>
	<string name="activity_multiple_choice_question_edit_title">Edit Question</string>
	<string name="activity_multiple_choice_settings_title">Multiple Choice Settings</string>
	<string name="activity_free_response_edit_title">Free Response Settings</string>
	<string name="activity_main_title">Welcome</string>
	<string name="drawer_menu_title">Quick Menu</string>
	<string name="item_detail_title">Item Detail</string>
	<string name="settings_title">Settings</string>
	<string name="activity_question_edit_title">Edit Question</string>
	<string name="activity_free_draw_title">Free Draw</string>
	<string name="activity_free_draw_edit_title">Edit Question</string>
	<string name="activity_main_swipe_complete">Complete</string>
	<string name="activity_main_swipe_create">Create</string>
	<string name="activity_main_welcome_to">Welcome to&#8230;</string>
	<string name="activity_main_recent_activity">Recent Activity</string>
	<string name="activity_create_description_header">Description</string>
	<string name="activity_complete_description_header">Description</string>
	<string name="activity_open_import_form">Open Import Form</string>
	<string name="activity_open_import_download_status_message">Downloading Forms&#8230;</string>
	<string name="activity_open_import_location_hint">Form URL</string>
	<string name="menu_create_add_new">Add</string>
	<string name="menu_create_add_new_free_response">Free Response</string>
	<string name="menu_create_add_new_free_draw">Free Draw</string>
	<string name="menu_create_add_new_multiple_choice">Multiple Choice</string>
	<string name="menu_create_edit_response_edit">Edit Choice</string>
	<string name="menu_create_edit_response_delete">Delete Choice</string>
	<string name="menu_create_response_add">Add Choice</string>
	<string name="menu_create_question_edit">Edit Question</string>
	<string name="menu_create_question_delete">Delete Question</string>
	<string name="menu_create_question_image">Set Image</string>
	<string name="menu_create_edit_save">Save</string>
	<string name="menu_create_edit_export">Export</string>
	<string name="menu_complete_add_new">Add</string>
	<string name="menu_complete_add_new_free_response">Free Response</string>
	<string name="menu_complete_add_new_free_draw">Free Draw</string>
	<string name="menu_complete_add_new_multiple_choice">Multiple Choice</string>
	<string name="menu_complete_edit_response_edit">Edit Choice</string>
	<string name="menu_complete_edit_response_delete">Delete Choice</string>
	<string name="menu_complete_response_add">Add Choice</string>
	<string name="menu_complete_question_edit">Edit Question</string>
	<string name="menu_complete_question_delete">Delete Question</string>
	<string name="menu_complete_question_image">Set Image</string>
	<string name="menu_complete_edit_save">Save</string>
	<string name="menu_complete_edit_export">Export</string>
	<string name="question_hint">Ask me anything&#8230;</string>
	<string name="free_response_settings_response_max_text">Max Length</string>
	<string name="free_response_settings_response_min_text">Min Length</string>
	<string name="free_response_settings_response_lines_text">Lines</string>
	<string name="multiple_choice_settings_response_min_text">Min Answers</string>
	<string name="multiple_choice_settings_response_max_text">Max Answers</string>
	<string name="multiple_choice_settings_response_text">Response</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_multiple_choice_response_edit">MultipleChoiceAnswerEdit</string>
	<string name="alert_dialog_problem">Problem</string>
	<string name="constraint_must_be_a_smaller_number">&#032;must be a smaller number</string>
	<string name="constraint_must_be_equal_to_or_lower_than">&#032;must be equal to or lower than&#032;</string>
	<string name="Specify_a">Specify a&#032;</string>
	<string name="default_multiple_choice_response">Example Response</string>
	<string name="default_content_description">image</string>
	<string name="default_new_form_title">New Form</string>
	<string name="pref_sync">Sync</string>
	<string name="pref_sync_summary">Sync</string>
	<string name="pref_settings_header">Settings</string>
	<string name="pref_settings_header_summary">Some preferences that could be helpful!</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in"><b>Sign in</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register"><b>Register</b></string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Username or password is incorrect.</string>
    <string name="error_register_failed">This user already exists.</string>
    <string name="error_field_required">This field is required</string>

</resources>
