<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_activity_main"
    android:background="@color/activity_main_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left">
    
    <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" 
			android:id="@+id/main_menu"
			tools:context="com.rhcloud.jop.formfactor.views.MainMenuActivity"
			tools:ignore="MergeRootFrame" >
		    
		    <TextView
		        android:id="@+id/main_activity_welcome"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="20dp"
		        android:textSize="30sp"
		        android:paddingTop="40dp"
		        android:textStyle="italic"
		        android:textColor="@color/text_view_text_secondary"
		        android:text="@string/activity_main_welcome_to"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <TextView
		        android:id="@+id/main_activity_welcome_title"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:paddingLeft="34dp"
		        android:paddingBottom="20dp"
		        android:textSize="46sp"
		        android:textAlignment="center"
		        android:paddingTop="20dp"
		        android:textStyle="bold"
		        android:textColor="@color/text_view_text_primary"
		        android:text="@string/app_name"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		   	<View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:background="@color/white_background_divider" />
		
		    <FrameLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="20dp" >
		
		        <TextView
		            android:id="@+id/main_activity_create"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		          	android:layout_gravity="left"
		            android:paddingLeft="20dp"
		        	android:textColor="@color/text_view_text_secondary"
		            android:text="@string/activity_main_swipe_create"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		        
		        <TextView
		            android:id="@+id/main_activity_complete"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:paddingRight="14dp"
		            android:layout_gravity="right"
		        	android:textColor="@color/text_view_text_secondary"
		            android:text="@string/activity_main_swipe_complete"
		            android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    </FrameLayout>
		
		    <FrameLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingBottom="10dp">
		
		      <ImageView
		          android:id="@+id/main_activity_swipe_right"
		          android:layout_width="100dp"
		          android:layout_height="76dp"
		          android:layout_gravity="left"
		          android:contentDescription="@id/main_activity_swipe_right"
		          android:src="@drawable/ic_swipe_right" />
		
		      <ImageView
		          android:id="@+id/main_activity_swipe_left"
		          android:layout_width="100dp"
		          android:layout_height="76dp"
		          android:layout_gravity="right"
		          android:contentDescription="@id/main_activity_swipe_right"
		          android:src="@drawable/ic_swipe_left" />
		      
		    </FrameLayout>
		    
		    <LinearLayout 
		        android:id="@+id/main_activity_recent_activities"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:paddingBottom="150dp"
				android:orientation="vertical">
		      	<View
				    android:layout_width="fill_parent"
				    android:layout_height="3dp"
				    android:background="@color/drawer_menu_divider" />

	   	        <TextView
	   	            android:id="@+id/main_activity_recent_activity"
	   	            android:layout_width="fill_parent"
	   	            android:layout_height="wrap_content"
	   	            android:background="@color/action_bar_background_secondary"
	   	            android:paddingBottom="5dp"
	   	            android:paddingLeft="20dp"
	   	            android:paddingTop="5dp"
	   	            android:text="@string/activity_main_recent_activity"
	   	            android:textColor="@color/text_view_text_menu"
	   	            android:textAppearance="?android:attr/textAppearanceLarge" />

		      	<View
				    android:layout_width="fill_parent"
				    android:layout_height="3dp"
				    android:background="@color/drawer_menu_divider" />
		    </LinearLayout>
		</LinearLayout>
	</ScrollView>
</android.support.v4.widget.DrawerLayout>
